# langchain_learning

Geekyshows/python/: README.md
Geekyshows/python/1.LangChain Python Setup and Installation/: README.md
Geekyshows/python/10.Vector Store Using ChromaDB in LangChain Python/: README.md
Geekyshows/python/11.Contextual Compression in LangChain Python/: README.md
Geekyshows/python/12.Chains in LangChain Python/: README.md
Geekyshows/python/13.Memory in LangChain Python/: README.md
Geekyshows/python/14.Agents in LangChain Python/: README.md
Geekyshows/python/15.Streaming in LangChain Python/: README.md
Geekyshows/python/16.Use Free LLM with LangChain Python/: README.md
Geekyshows/python/18.Use Free LLM Locally with LangChain Python copy/: README.md
Geekyshows/python/19.Text to Image using LangChain Python/: README.md
Geekyshows/python/2.LLMs and Chat Models with LangChain Python/: README.md
Geekyshows/python/3.Prompt Template in LangChain Python/: README.md
Geekyshows/python/4.Master Chef AI using Django and LangChain Python/: README.md
Geekyshows/python/5.Few Shot Prompt Template in LangChain Python/: README.md
Geekyshows/python/6.Output Parser in LangChain Python/: README.md
Krish Naik/: README.md
Krish Naik/Complete Agentic AI Course In 10 Hours/: README.md
Krish Naik/Complete Agentic AI Course In 10 Hours/1.langchain_course/: .env.example  README.md  main.py  pyproject.toml
Krish Naik/Complete Agentic AI Course In 10 Hours/1.langchain_course/updatedlangchain/: 1.langchinintro.ipynb  README.md  langchinintro.ipynb
(+88 files in other folders)
